2021/07/26 Visenri

    * support/regression/fwk/include/testfwk.h
      support/regression/fwk/lib/testfwk.c
      Lightweight version of test framework (testfwk) [#393].
      Added new macro to indicate we are targeting a very low memory device: TARGET_VERY_LOW_MEMORY.
      Added macros to easy the check of all pdk variants with 1 or 2 checks [#394].
      Different implementation of __printd with hex output (for TARGET_VERY_LOW_MEMORY).
      Skipped some strings in "Summary" output to save memory (for TARGET_VERY_LOW_MEMORY).

2021/07/26 Visenri

    * support/regression/collate-results.py
      support/regression/compact-results.py
      Added processing for the stack overflow message from simulator.
      Added new check to reset state machine and name with "Simulation started" string
      Added checks to validate the name after "--- Running", because sometimes we get garbage, because of caotic program behavior (due to stack overflow or wrong code).
      Added the possibility to parse hex values instead of decimal [#393].
      Better output in case of a catastrophic failure ("--- Summary" not found).
      Fixed wrong regular expression to find ".ihx" file.

2021/07/26 Visenri

    * sdas/aspdk13/pdk13mch.c
      sdas/aspdk13/pdk13pst.c
      sdas/aspdk14/pdk14mch.c
      sdas/aspdk14/pdk14pst.c
      sdas/aspdk15/pdk15mch.c
      sdas/aspdk15/pdk15pst.c
      sdas/aspdk16/pdk16mch.c
      sdas/aspdk16/pdk16pst.c
      sdas/aspdk/pdk.h
      sdas/aspdk/pdkadr.c
      sdas/aspdk/pdkmch.c
      Added assembler support for new pdk .io mnemonics (bug #3259).

    * src/pdk/gen.c
      src/pdk/main.c
      src/pdk/peep.c
      src/pdk/peeph.def
      Updated compiler generated assembly and rules according to new pdk .io mnemonics

2021/07/26 Visenri

    * sim/ucsim/pdk.src/inst.cc
    * sim/ucsim/pdk.src/instcl.h
    * sim/ucsim/sim.src/sim.cc
      Added support for stack overflow detection.